# logl

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  installdeps  run
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: hello_world.cpp  main.cpp
src/imageProcessing/: CMakeLists.txt  main.cpp
src/indexedQuad/: CMakeLists.txt  main.cpp
src/indexedTriangle/: CMakeLists.txt  main.cpp
src/shaders/: CMakeLists.txt  main.cpp
src/textures/: CMakeLists.txt  main.cpp
src/triangle/: CMakeLists.txt  main.cpp
